3.1.1
	Check if -lbind requires -lpthread, for Linux 
	Correctly enable non blocking I/O fox MX sync (Attila Bruncsak)
	Pointer to DRAC documentation (Matthias Scheler)
	FreeBSD build fixes (Hajimu UMEMOTO)
	Remove the /tmp/access-list.debug for security sake (AIDA Shinra)
	Fix display bug in log messages (AIDA Shinra)
	Updated the list of broken MTA
	Fix MX sync between Tru64 and Linux (Attila Bruncsak)
	Silly build fix for platforms that lack vsyslog()
	Honour LINE_MAX for syslog (Attila Bruncsak)
	Warn about ignored ACL lines after acl default rule
	Fix various race conditions (AIDA Shinra)
	Fix big bugs in macro support (AIDA Shinra)
	Fix build warning on Tru64
	Build fix on Solaris
	Documentation fix
3.0a5
	Build fix on Tru64, fix MX sync (Attila Bruncsak)
	Fix various race conditions (AIDA Shinra)
3.0a4
	IPv6 and build fixes (Hajimu UMEMOTO)
3.0a3
	Fix --disable-drac and --disable-dnsrbl (Fabien Tassin)
	Add support to use Sendmail macros in the ACL
	Remove the need of LOG_PERROR, make sure no log is missed
	Make sure -c tells what happens and return an usable exit code
3.0a2
	Documentation fix about required sendmail macros
	Missing bit in rc-redhat.sh (Jobst Schmalenbach)
	Fix bugs that prevented IPv6 addresses resolution
	Add more log output for blackist and flushaddr (Fabien Tassin)
	Allow rejecting by tempfail on blacklist configuration (Fabien Tassin)
3.0a1
	Build fix
2.1.12
	IPv6 fixes again (Hajimu UMEMOTO)
	Build fix on FreeBSD
	per-ACL SMTP error code and messages
2.1.11
	IPv6 fixes (Hajimu UMEMOTO)
	flushaddr flag for access lists, which flush an IP from the database
2.1.10
	Multi-line statement in the config file
	Fix crash when using -c and lists or acl
	Build fixes
2.1.9
	Handle FreeBSD 5.2 DNS resolver for DNSRBL (Hajimu UMEMOTO)
	Build fixes for Linux (Hajimu UMEMOTO)
	Fix uninitialized string (Hajimu UMEMOTO)
2.1.8
	acl blacklist feature
2.1.7
	Per-ACL greylisting and autowhitelisting delays
	DNSRBL support in ACL